# tictactoe-gameaf5f297e-756a-4b2b-a310-b5713b2216b2

./: .env.example  README.md  pyproject.toml  schema.prisma
.github/workflows/: deploy.yml
project/: server.py
